# libfc14audiodecoder

./: .gitignore  BUILD.md  HISTORY.md  Makefile.am  Makefile.in  README  README.md  aclocal.m4  build.sh  configure  configure.ac  configure.in  libfc14audiodecoder.pc.in
music/: README.md
src/: Analyze.cpp  Analyze.h  COSO.cpp  Config.h  Config.h.in  Dump.cpp  Dump.h  FC.cpp  FC.h  FC_Data.cpp  Instrument.cpp  LamePaula.h  LamePaulaMixer.cpp  LamePaulaMixer.h  LiveFix.h  MCMD.cpp  Makefile.am  Makefile.in  MyEndian.h  Paula.h  Player.cpp  Probe.cpp  TFMX.cpp  TraitsByChecksum.cpp  Vibrato.cpp  common.h  fc14audiodecoder.cpp  fc14audiodecoder.h
tools/fcplay/: Makefile.am  fcplay.cpp  fcplay.h
